--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.5.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
