--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint": "8.55.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.395.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "sort-by": "^1.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -26,7 +31,6 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.5.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.6.4",
