--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.1",
+    "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
