--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.3.0",
