tests and mock: e2e
Configure setup playwright

Signed-off-by: fabiobatoni <fabio_batoni@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.45.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.14.2",
